# persona-chess

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  development.md  release.md  roadmap.md
src/persona_chess/: __init__.py  _version.py  cli.py  exceptions.py  facade.py
src/persona_chess/chess/: __init__.py  legal.py
src/persona_chess/dataset/: __init__.py  builder.py  jsonl.py  records.py  split.py
src/persona_chess/engines/: __init__.py  guidance.py
src/persona_chess/evaluation/: __init__.py  benchmark.py  metrics.py  persona_report.py  report.py
src/persona_chess/model_card/: __init__.py  builder.py  types.py
src/persona_chess/models/: __init__.py  base.py  blend.py  frequency.py  opening.py  phase.py  registry.py  scoring.py  types.py
src/persona_chess/neural/: __init__.py  autotune.py  checkpoint.py  config.py  cuda.py  hf_base.py  inference.py  lora.py  manifest.py  model_hub.py  planning.py  position_vocabulary.py  samples.py  session.py  streaming.py  tokens.py  torch_backend.py  trainer.py  validation.py  vocabulary.py
src/persona_chess/pgn/: __init__.py  filters.py  reader.py
src/persona_chess/profile/: __init__.py  builder.py  types.py
src/persona_chess/storage/: __init__.py  artifact.py
src/persona_chess/training/: __init__.py  jsonl.py  records.py
tests/: test_baseline_models.py  test_benchmark_report.py  test_cli.py  test_cuda_diagnostics.py  test_dataset.py  test_dataset_split.py  test_engine_guidance.py  test_evaluation_metrics.py  test_hf_base_cache.py  test_model_card.py  test_model_hub.py  test_model_registry.py  test_neural_autotune.py  test_neural_foundation.py  test_persona.py  test_persona_neural_api.py  test_persona_report.py  test_pgn_formats.py  test_profile.py  test_training_records.py
tests/fixtures/: sample.pgn
